--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
 
 <h1>My First Heading</h1>
 
-<p>My Second paragraph.</p>
-<p>My third paragraph.</p>
-<p>My fourth paragraph.</p>
+<p>My First paragraph.</p>
 
-<p>My fifth paragraph by me</p>
-  <p>My fifth paragraph by abc</p>
-  
 
 </body>
 </html>
